--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>responsive-site</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -13,28 +14,28 @@
     </header>
 
     <main>
-        <h2 id="title">タイトル</h2>
+        <h2 class="title">タイトル</h2>
         <div id="showcase">
-            <section id="box">
-            <h2 id="box-title">タイトル</h2>
-            <p id="box-text">テキスト</p>
+            <section class="box">
+            <h2 class="box-title">タイトル</h2>
+            <p class="box-text">テキスト</p>
             </section>
             
-            <section id="box">
-            <h2 id="box-title">タイトル</h2>
-            <p id="box-text">テキスト</p>
+            <section class="box">
+            <h2 class="box-title">タイトル</h2>
+            <p class="box-text">テキスト</p>
             </section>
             
-            <section id="box">
-            <h2 id="box-title">タイトル</h2>
-            <p id="box-text">テキスト</p>
+            <section class="box">
+            <h2 class="box-title">タイトル</h2>
+            <p class="box-text">テキスト</p>
             </section>
         </div>
     </main>
 
     <footer>
         <div class="footer-box">
-          <h2 id="title">タイトル</h2>
+          <h2 class="title">タイトル</h2>
           <a href="#" class="button">ボタン</a>
         </div>
     </footer>
